# faaa

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
example/: app.py  generate_tool_schema_examples.py  llm.py  playground.py  tool_schema.py
src/faaa/: __init__.py  api.py  app.py  exception.py  handlers.py  llm.py  prompt.py  schema.py  test_llm.py  test_schema.py  util.py
src/faaa/core/: llm.py  test_llm.py
src/faaa/decorator/: agent.py  router.py
src/faaa/function/: llm.py  prompt.py  test_llm.py
src/faaa/schema/: tool.py
